Autoryzacja + dodane przyciski u mnie

--- a/Projekt/Pages/ManageResponsibilities/AcceptApplication.cshtml
+++ b/Projekt/Pages/ManageResponsibilities/AcceptApplication.cshtml
@@ -43,7 +43,7 @@
 
     <form method="post">
         <input type="hidden" asp-for="Job.Id" />
-        <input type="submit" value="Tak" class="btn btn-primary" /> |
-        <a asp-page="./ApproveResponsibility">Wróć <class="btn btn-light" /></a>
+        <input type="submit" value="Tak" class="btn btn-primary" /> 
+        <a asp-page="./ApproveResponsibility"><button type="button" class="btn btn-secondary">wróć</button> </a>
     </form>
 </div>
