--- a/Projekt/Pages/ManageResponsibilities/DeleteApplication.cshtml
+++ b/Projekt/Pages/ManageResponsibilities/DeleteApplication.cshtml
@@ -46,7 +46,7 @@
         <textarea class="form-control input-desc" required placeholder="Powód odrzucenia zgłoszenia" asp-for=Letterbox.Content></textarea><br />    
        
         <input type="hidden" asp-for="Job.Id" />
-        <input type="submit" value="Tak" class="btn btn-danger" /> |
-        <a asp-page="./ApproveResponsibility">Wróć <class="btn btn-light" /></a>
+        <input type="submit" value="Tak" class="btn btn-danger" /> 
+        <a asp-page="./ApproveResponsibility"><button type="button" class="btn btn-secondary">wróć</button> </a>
     </form>
 </div>
