--- a/Projekt/Pages/PanelAdmin.cshtml
+++ b/Projekt/Pages/PanelAdmin.cshtml
@@ -82,7 +82,7 @@
                         </a>
                     </td>
                     <td height="250" width="648">
-                        <a asp-page="/CreateJob">
+                        <a asp-page="/ManageResponsibilities/ApproveResponsibility">
                             <h4>Rozpatrz zgłoszenia do pracy</h4><br />
                             <img src="/AcceptVolunteers.png" width="64" height="64" />
                         </a>
