--- a/Projekt/Pages/AddResponsibility.cshtml
+++ b/Projekt/Pages/AddResponsibility.cshtml
@@ -39,6 +39,6 @@
         <input type="hidden" asp-for="Job.Id" />
         <input type="submit" value="Tak" class="btn btn-primary" />
 
-        <a asp-page="./JobSchedule">Wróć <class="btn btn-light" /></a>
+        <a asp-page="./JobSchedule"><button type="button" class="btn btn-secondary">wróć</button> </a>
     </form>
 </div>
