--- a/Projekt/Pages/CreateJob.cshtml
+++ b/Projekt/Pages/CreateJob.cshtml
@@ -36,15 +36,14 @@
     <h3>Podaj datę rozpoczęcia pracy, zakończenia oraz obowiązki.</h3>
     <form method="post" enctype="multipart/form-data">
     <div class="form-group">
-    Od: <input class="form-control" asp-for="Job.JobStartDate"  asp-format="{0:yyyy-MM-ddTHH:mm}"/>
+    Start: <input class="form-control" asp-for="Job.JobStartDate"  asp-format="{0:yyyy-MM-ddTHH:mm}"/>
     </div>
     <div class="form-group">
-    Do: <input class="form-control" asp-for="Job.JobEndDate"  asp-format="{0:yyyy-MM-ddTHH:mm}"/>
+    Koniec: <input class="form-control" asp-for="Job.JobEndDate"  asp-format="{0:yyyy-MM-ddTHH:mm}"/>
     </div>
 
     <div class="form-group"> 
-     <label class="input" asp-for="Job.Responsibility"></label>
-     <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź obowiązek" asp-for="Job.Responsibility" />
+     Obowiązek: <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź obowiązek" asp-for="Job.Responsibility" />
     
      </div>
 
