--- a/Projekt/Pages/CreateReport.cshtml
+++ b/Projekt/Pages/CreateReport.cshtml
@@ -94,12 +94,20 @@
     <div class="text-center">
         <form method="post" enctype="multipart/form-data">
             <div>
-                <label class="input" asp-for="Animals.Name"></label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź imię zwierzaka" asp-for="Animals.Name" />
-                <label class="input" asp-for="Animals.Description"></label>
-                <textarea class="form-control input-desc" placeholder="Wprowadź opis zwierzaka" asp-for=Animals.Description></textarea>
-                <label class="input" asp-for="Animals.FilePaths"></label>
-                <input class="post-image" type="file" asp-for="@Model.FormFiles" multiple />
+                <div>
+                    <label class="input" style="float: left;" asp-for="Animals.Name"></label>
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź imię zwierzaka" asp-for="Animals.Name" />
+                    <span asp-validation-for="Animals.Name" class="text-danger" style="float: left;"></span>
+                </div>
+                <div>
+                    <label class="input" style="float: left; clear: left;" asp-for="Animals.Description"></label>
+                    <textarea class="form-control input-desc" placeholder="Wprowadź opis zwierzaka" asp-for=Animals.Description></textarea>
+                    <span asp-validation-for="Animals.Description" class="text-danger" style="float: left;"></span>
+                </div>
+                <div>
+                    <label class="input" style="float: left; clear: left;" asp-for="Animals.FilePaths"></label>
+                    <input class="post-image" type="file" asp-for="@Model.FormFiles" multiple />
+                </div>
             </div>
             <div class="button-distance">
                 <button type="submit" style="margin: 30px 0px;" id="button1" class="button inner" name="id" value="Animals.Id"><span>Zatwierdź</span></button>
