--- a/Projekt/Pages/Report/Edit.cshtml
+++ b/Projekt/Pages/Report/Edit.cshtml
@@ -10,6 +10,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
 
 <style>
+    .ow-break-word {
+        overflow-wrap: break-word;
+    }
+
     .distance {
         margin: 15px 0px;
     }
@@ -70,7 +74,6 @@
 
 <div class="font-family">
     <h1>Panel postu</h1>
-    <h4>Animals</h4>
 </div>
 
 <hr />
@@ -81,13 +84,17 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Animals.Id" />
             <div class="form-group">
-                <label asp-for="Animals.Name" class="control-label distance"></label>
-                <input asp-for="Animals.Name" class="form-control" disabled />
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.Animals.Name)
+                </dt>
+                <h6 class="ow-break-word">@Model.Animals.Name</h6>
                 <span asp-validation-for="Animals.Name" class="text-danger"></span>
             </div>
             <div class="form-group distance">
-                <label asp-for="Animals.Description" class="control-label distance"></label>
-                <input asp-for="Animals.Description" class="form-control" disabled />
+                <dt class="col-sm-4">
+                    @Html.DisplayNameFor(model => model.Animals.Description)
+                </dt>
+                <h6 class="ow-break-word">@Model.Animals.Description</h6>
                 <span asp-validation-for="Animals.Description" class="text-danger"></span>
             </div>
 
@@ -122,7 +129,9 @@
     </div>
     <div class="col-md-8 font-family">
         <div class="form-group">
-            <label asp-for="Animals.FilePaths" class="control-label distance"></label>
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.Animals.FilePaths)
+            </dt>
 
             <div id="carouselExample" class="carousel slide w-100 h-100 text-center" data-bs-ride="carousel" data-bs-interval="false">
                 <div class="carousel-inner text-center">
