--- a/Projekt/Pages/CreateJob.cshtml
+++ b/Projekt/Pages/CreateJob.cshtml
@@ -28,28 +28,60 @@
     h2 {
         font-size: 20px;
     }
+    h6 {
+        font-size: 15px;
+    }
+
+        .alert {
+        clear: left;
+    }
+
+        .alert {
+        border-style: solid;
+        border: 3px;
+        font-family: 'Space Mono', monospace;
+    }
+
 </style>
 
 
 <body>
     <h2>Utwórz termin pracy</h2>
     <h3>Podaj datę rozpoczęcia pracy, zakończenia oraz obowiązki.</h3>
-    <form method="post" enctype="multipart/form-data">
-    <div class="form-group">
-    Start: <input class="form-control" asp-for="Job.JobStartDate"  asp-format="{0:yyyy-MM-ddTHH:mm}"/>
+
+    <div>
+        <form method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                Start: <input class="form-control" asp-for="Job.JobStartDate" asp-format="{0:yyyy-MM-ddTHH:mm}" />
+            </div>
+            <div class="form-group">
+                Koniec: <input class="form-control" asp-for="Job.JobEndDate" asp-format="{0:yyyy-MM-ddTHH:mm}" />
+            </div>
+
+            <div class="form-group">
+                Obowiązek: <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź obowiązek" asp-for="Job.Responsibility" />
+
+            </div>
+
+
+            <button type="submit" class="btn btn-primary submit">Zatwierdź</button>
+        </form>
     </div>
-    <div class="form-group">
-    Koniec: <input class="form-control" asp-for="Job.JobEndDate"  asp-format="{0:yyyy-MM-ddTHH:mm}"/>
+
+    <br />
+
+    <div>
+        @if (Model.AlertMessage != null)
+{
+    <div class="alert alert-primary" role="alert">
+        <h6><b>Spróbuj ponownie</b></h6>
+        @Model.AlertMessage
+    </div>
+}
     </div>
 
-    <div class="form-group"> 
-     Obowiązek: <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź obowiązek" asp-for="Job.Responsibility" />
-    
-     </div>
 
 
-    <button type="submit" class="btn btn-primary submit">Zatwierdź</button>
-    </form>
 
 
 </body>
