szybka podmianka wieku

--- a/Projekt/Pages/CreateAdopt.cshtml
+++ b/Projekt/Pages/CreateAdopt.cshtml
@@ -100,7 +100,7 @@
                 <label class="input" asp-for="AdoptAnimals.Breed"></label>
                 <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź rasę zwierzaka" asp-for="AdoptAnimals.Breed" />
                 <label class="input" asp-for="AdoptAnimals.Age"></label>
-                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź rasę zwierzaka" asp-for="AdoptAnimals.Age" />
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź wiek zwierzaka" asp-for="AdoptAnimals.Age" />
                 <label class="input" asp-for="AdoptAnimals.Description"></label>
                 <textarea class="form-control input-desc" placeholder="Wprowadź opis zwierzaka" asp-for=AdoptAnimals.Description></textarea>
             </div>
