--- a/Projekt/Pages/Email/YourEmails.cshtml
+++ b/Projekt/Pages/Email/YourEmails.cshtml
@@ -56,7 +56,7 @@
                         @Html.DisplayFor(modelItem => item.ReceiverId)
                     </td>
                     <td>
-                        <a asp-page="./Details" asp-route-id="@item.Id">
+                        <a asp-page="./YourEmailsDetails" asp-route-id="@item.Id">
                             <p>@item.Title</p>
                         </a>
                     </td>
