--- a/Projekt/Pages/PanelAdmin.cshtml
+++ b/Projekt/Pages/PanelAdmin.cshtml
@@ -72,7 +72,12 @@
                             <img src="/MissingAnimal.png" width="64" height="64" />
                         </a>
                     </th>
-                    <th>Utwórz </th>
+                    <th height="250" width="648">
+                        <a asp-page="/CreateAdoption">
+                            <h4>Utwórz zgłoszenie adopcyjne</h4><br />
+                            <img src="/AddAdoption.png" width="64" height="64" />
+                        </a>
+                    </th>
                 </tr>
                 <tr>
                     <td height="250" width="648">
