--- a/Projekt/Pages/Report/Edit.cshtml
+++ b/Projekt/Pages/Report/Edit.cshtml
@@ -85,10 +85,10 @@
             <input type="hidden" asp-for="Animals.Id" />
             <div class="form-group">
                 <dt class="col-sm-4">
-                    @Html.DisplayNameFor(model => model.Animals.Name)
+                    @Html.DisplayNameFor(model => model.Animals.Title)
                 </dt>
-                <h6 class="ow-break-word">@Model.Animals.Name</h6>
-                <span asp-validation-for="Animals.Name" class="text-danger"></span>
+                <h6 class="ow-break-word">@Model.Animals.Title</h6>
+                <span asp-validation-for="Animals.Title" class="text-danger"></span>
             </div>
             <div class="form-group distance">
                 <dt class="col-sm-4">
