--- a/Projekt/Pages/Shared/_Layout.cshtml
+++ b/Projekt/Pages/Shared/_Layout.cshtml
@@ -26,10 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/CreateReport">Utwórz zgłoszenie</a>
                         </li>
                         <li>
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CreateAdopt">Utwórz ogłoszenie</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-dark" asp-area="" asp-page="/AdoptAd">Ogłoszenia adopcyjne</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/AdoptionList">Adopcja</a>
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-page="/Email/Index">Skrzynka Odbiorcza</a>
