--- a/Projekt/Pages/AdoptionList.cshtml
+++ b/Projekt/Pages/AdoptionList.cshtml
@@ -1,11 +1,7 @@
 ﻿@page
-@model IndexModel
+@model Projekt.Pages.AdoptionListModel
 @{
-    ViewData["Title"] = "Home page";
 }
-
-@using Microsoft.AspNetCore.Authorization
-@inject IAuthorizationService AuthorizationService
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +32,8 @@
     .distance {
         margin: 50px 0px;
     }
-    .border-style{
+
+    .border-style {
         border-style: ridge;
         margin: 25px 0px;
         padding: 20px;
@@ -81,26 +78,25 @@
         height: 225px;
         max-height: 225px;
     }
+    .left-size{
+        clear: left;
+    }
+    .text-left-size{
+        float: left;
+    }
 </style>
 
-<div class="text-center">
-    <h1 class="display-4">Aktualności</h1>
-</div>
+<h2>Zwierzęta do adopcji</h2>
 
 <div class="text-center post">
     <link rel="stylesheet" href="~/css/Buttons.css" />
     <link rel="stylesheet" href="~/css/Border.css" />
-    @if (Model.Animals != null)
+    @if (Model.Adoptions != null)
     {
         <ul>
-            @foreach (var element in Model.Animals)
+            @foreach (var element in Model.Adoptions)
             {
                 <div class="border-style">
-                    <h2 style="float: left;"><b>@element.Title </b></h2>
-                    <h3 style="float: right;"><b>Data dodania:</b> @element.ReportDate</h3>
-                    <br>
-                    <h4 style="float: left;"><b>Opis:</b> @element.Description</h4>
-                    <br>
                     <div class="text-center distance">
                         <div id="carouselExample-@element.Id" class="carousel slide w-100 text-center" data-bs-ride="carousel" data-bs-interval="false">
                             <div class="carousel-inner">
@@ -136,47 +132,49 @@
                                 </form>
                             </div>
                         }
+                    </div>
+                    <br>
+                    <hr>
+                    <br>
+                    <div class="left-size">
+                        <h5 style="float: left;">Opis zwierzaka</h5>
                         <br>
-                        <div class="distance">
-                            <form method="post">
-                                <label class="input" style="float: left; margin: 10px 0px;" asp-for="@Model.Comment"></label>
-                                <input type="text" style="margin: 10px 0px;" class="form-control" id="formGroupExampleInput" placeholder="Wprowadź treść komentarza" asp-for="@Model.Comment" />
-                                <button type="submit" id="button1" class="button inner" name="id" value="@element.Id"><span>Wyślij </span></button>
-                            </form>
+                        <div>
+                            <dt class="col-sm-4">
+                                @Html.DisplayNameFor(model => model.Adoption.Name)
+                            </dt>
+                            <h6 class="text-left-size">@element.Name</h6>
                         </div>
-
                         <br>
+                        <div>
+                            <dt class="col-sm-4">
+                                @Html.DisplayNameFor(model => model.Adoption.Species)
+                            </dt>
+                            <h6 class="text-left-size">@element.Species</h6>
+                        </div>
                         <br>
-                        <h5 style="float: left; margin: 0px 0px 30px;">Komentarze</h5>
+                        <div class="text-left-size">
+                            <dt class="col-sm-4">
+                                @Html.DisplayNameFor(model => model.Adoption.Breed)
+                            </dt>
+                            <h6>@element.Breed</h6>
+                        </div>
                         <br>
-                        <div class="comments">
-                            @if (element.Posts != null)
-                            {
-                                @foreach (var item in element.Posts)
-                                {
-                                    @if (item.AnimalsId == element.Id)
-                                    {
-                                        <div class="form-group post-distance">
-                                            @if (@item.UserName == null)
-                                            {
-                                                <h6 style="float: left;">Użytkownik</h6>
-                                            }
-                                            else
-                                            {
-                                                <h6 style="float: left;">@item.UserName</h6>
-                                            }
-                                            <input asp-for="@item.Content" class="form-control" disabled />
-                                            <span asp-validation-for="@item.Content" class="text-danger"></span>
-                                        </div>
-                                    }
-                                }
-                            }
-                            else
-                            {
-                                <h6>Brak komentarzy</h6>
-                            }
+                        <div class="text-left-size">
+                            <dt class="col-sm-4">
+                                @Html.DisplayNameFor(model => model.Adoption.Age)
+                            </dt>
+                            <h6>@element.Age</h6>
+                        </div>
+                        <br>
+                        <div class="text-left-size">
+                            <dt class="col-sm-4">
+                                @Html.DisplayNameFor(model => model.Adoption.Description)
+                            </dt>
+                            <h6>@element.Description</h6>
                         </div>
                     </div>
+
                 </div>
             }
         </ul>
