--- a/Projekt/Pages/Shared/_Layout.cshtml
+++ b/Projekt/Pages/Shared/_Layout.cshtml
@@ -28,15 +28,18 @@
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-page="/Announcement/AdoptionList">Adopcja</a>
                         </li>
-                        <li>
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Email/Index">Skrzynka Odbiorcza</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Schedule/JobSchedule">Harmonogram</a>
-                        </li>
-                        <li>
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Schedule/WorkerResponsibilities">Twoje obowiązki</a>
-                        </li>
+                        @if (User.Identity.Name != null)
+                        {
+                            <li>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Email/Index">Skrzynka Odbiorcza</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Schedule/JobSchedule">Harmonogram</a>
+                            </li>
+                            <li>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Schedule/WorkerResponsibilities">Twoje obowiązki</a>
+                            </li>
+                        }
                         @if (User.Identity.Name == "admin@gmail.com")
                         {
                             <li>
