--- a/Projekt/Pages/Shared/_Layout.cshtml
+++ b/Projekt/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CreateReport">Utwórz zgłoszenie</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Report/CreateReport">Utwórz zgłoszenie</a>
                         </li>
                         <li>
                             <a class="nav-link text-dark" asp-area="" asp-page="/Announcement/AdoptionList">Adopcja</a>
@@ -60,7 +60,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - Projekt - <a asp-area="" asp-page="/Privacy">Privacy</a>
+           Dane kontaktowe - Adres Email: admin@gmail.com / Telefon Kontaktowy: +48 123-456-789
         </div>
     </footer>
 
